--- a/.github/workflows/nightly_builds.yml
+++ b/.github/workflows/nightly_builds.yml
@@ -1,11 +1,11 @@
 #### Publish tags to docker hub
-name: Deploy to Docker Hub for tags
+name: Deploy nightly build to Dockerhub
 on:
     schedule:
         - cron: '0 2 * * *' # run at 2 AM UTC
 jobs:
   deploy:
-    name: Deploy to Docker Hub
+    name: Checkout and deploy
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1  
