Changed to base image

--- a/.github/workflows/nightly_builds.yml
+++ b/.github/workflows/nightly_builds.yml
@@ -20,4 +20,4 @@ jobs:
             password: ${{ secrets.DOCKER_TOKEN }}
             repository: thevlang/vlang
             tags: latest, dev, buster
-            dockerfile: ${{github.workspace}}/Dockerfile
+            dockerfile: ${{github.workspace}}/docker/vlang/Dockerfile.nightly
