--- a/.github/workflows/nightly_builds.yml
+++ b/.github/workflows/nightly_builds.yml
@@ -6,6 +6,7 @@ on:
     - master
     paths:
       - '.github/workflows/nightly_builds.yml'
+      - 'docker/vlang/Dockerfile.nightly'
   schedule:
       - cron: '0 2 * * *' # run at 2 AM UTC
 jobs:
