--- a/docker/vlang/Dockerfile.nightly
+++ b/docker/vlang/Dockerfile.nightly
@@ -7,7 +7,8 @@ LABEL maintainer="helto4real <helto4real@joysoftware.xyz>"
 
 WORKDIR /opt/vlang
 
-RUN apt-get install -y --no-install-recommends clang && \
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends clang && \
     apt-get clean && rm -rf /var/cache/apt/archives/* && \
     rm -rf /var/lib/apt/lists/*
 
