--- a/docker/vlang/Dockerfile.buster
+++ b/docker/vlang/Dockerfile.buster
@@ -10,4 +10,5 @@ RUN apt-get update && \
     apt-get clean && rm -rf /var/cache/apt/archives/* && \
     rm -rf /var/lib/apt/lists/*
 
+# Install V
 RUN git clone https://github.com/vlang/v /opt/vlang && make && v -version
