--- a/docker/vlang/Dockerfile.alpine
+++ b/docker/vlang/Dockerfile.alpine
@@ -3,7 +3,7 @@
 # - gcc compiler (only works on alpine)
 
 # Stage 1 - Build the V-compiler
-FROM thevlang/vlang-base:alpine AS BUILDER
+FROM thevlang/vlang-base:alpine AS builder
 
 # Add the build dependencies
 RUN apk --no-cache add \
@@ -18,11 +18,11 @@ RUN git clone https://github.com/vlang/v /opt/vlang && make && v -version
 # Stage 2 - Make minimal runtime without git and make 
 #           we still nedd gcc and musl-dev for v to compile
 
-FROM thevlang/vlang-base:alpine AS RUNTIME
+FROM thevlang/vlang-base:alpine AS runtime
 
 RUN apk --no-cache add \
     gcc musl-dev 
 
 # Copy the prebuilt V compiler
-COPY --from=BUILDER /opt/vlang /opt/vlang
+COPY --from=builder /opt/vlang /opt/vlang
 
