--- a/.github/workflows/nightly_builds.yml
+++ b/.github/workflows/nightly_builds.yml
@@ -23,3 +23,11 @@ jobs:
             tag_with_sha: true
             tags: latest, dev, buster
             dockerfile: ${{github.workspace}}/docker/vlang/Dockerfile.buster
+      - uses: docker/build-push-action@v1
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_TOKEN }}
+            repository: thevlang/vlang
+            tag_with_sha: true
+            tags: alpine
+            dockerfile: ${{github.workspace}}/docker/vlang/Dockerfile.alpine
