--- a/.github/workflows/base_debian.yml
+++ b/.github/workflows/base_debian.yml
@@ -17,6 +17,6 @@ jobs:
         with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_TOKEN }}
-            repository: thevlang/vlang-base
-            tags: latest, buster
+            repository: thevlang/vlang
+            tags: buster-base
             dockerfile: ${{github.workspace}}/docker/base/os/debian/Dockerfile.buster
