--- a/docker/vlang/Dockerfile.alpine
+++ b/docker/vlang/Dockerfile.alpine
@@ -3,13 +3,7 @@
 # - gcc compiler (only works on alpine)
 
 # Stage 1 - Build the V-compiler
-FROM thevlang/vlang-base:alpine AS builder
-
-# Add the build dependencies
-RUN apk --no-cache add \
-    git make gcc \
-    musl-dev 
-# libx11-dev glfw-dev freetype-dev
+FROM thevlang/vlang:alpine-builder AS builder
 
 WORKDIR /opt/vlang
 
@@ -18,7 +12,7 @@ RUN git clone https://github.com/vlang/v /opt/vlang && make && v -version
 # Stage 2 - Make minimal runtime without git and make 
 #           we still nedd gcc and musl-dev for v to compile
 
-FROM thevlang/vlang-base:alpine AS runtime
+FROM thevlang/vlang:alpine-base AS runtime
 
 RUN apk --no-cache add \
     gcc musl-dev 
