--- a/.github/workflows/vlang_alpine.yml
+++ b/.github/workflows/vlang_alpine.yml
@@ -17,6 +17,6 @@ jobs:
         with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_TOKEN }}
-            repository: thevlang/vlang-base
-            tags: alpine
+            repository: thevlang/vlang
+            tags: alpine-base
             dockerfile: ${{github.workspace}}/docker/base/os/alpine/Dockerfile.alpine
