--- a/.github/workflows/nightly_builds.yml
+++ b/.github/workflows/nightly_builds.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1  
       - uses: docker/build-push-action@v1
+        name: Build and deploy Debian Buster
         with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_TOKEN }}
@@ -22,9 +23,27 @@ jobs:
             tags: latest, buster
             dockerfile: ${{github.workspace}}/docker/vlang/Dockerfile.buster
       - uses: docker/build-push-action@v1
+        name: Build and deploy Alpine 
         with:
             username: ${{ secrets.DOCKER_USERNAME }}
             password: ${{ secrets.DOCKER_TOKEN }}
             repository: thevlang/vlang
             tags: alpine
             dockerfile: ${{github.workspace}}/docker/vlang/Dockerfile.alpine
+      - uses: docker/build-push-action@v1
+        name: Build and deploy developer build Alpine 
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_TOKEN }}
+            repository: thevlang/vlang
+            tags: alpine-dev
+            dockerfile: ${{github.workspace}}/docker/vlang/Dockerfile.alpine.dev-full
+      - uses: docker/build-push-action@v1
+        name: Build and deploy developer build Debian BUster 
+        with:
+            username: ${{ secrets.DOCKER_USERNAME }}
+            password: ${{ secrets.DOCKER_TOKEN }}
+            repository: thevlang/vlang
+            tags: buster-dev
+            dockerfile: ${{github.workspace}}/docker/vlang/Dockerfile.buster.dev-full
+    
