--- a/docker/vlang/Dockerfile.alpine.build
+++ b/docker/vlang/Dockerfile.alpine.build
@@ -1,7 +1,7 @@
 # Builder image with alpine base, used as builder stage
 # for multi-stage builds. Also base for full dev image
 # - All dependecies
-# - gcc compiler
+# - clang compiler (and gcc needed for clang to work on alpine)
 # - nodejs for js backend
 
 # Stage 1 - Build the V-compiler
@@ -17,6 +17,4 @@ RUN apk --no-cache add \
     make musl-dev valgrind clang gcc \
     # V-UI dependencies
     libx11-dev glfw-dev freetype-dev 
-# Make cc 
-# ln -sf /usr/bin/clang /usr/bin/cc 
-#ln -sf /usr/bin/lld /usr/bin/ld
+
