--- a/docker/vlang/Dockerfile.alpine.dev-full
+++ b/docker/vlang/Dockerfile.alpine.dev-full
@@ -6,4 +6,8 @@ LABEL maintainer="helto4real <helto4real@joysoftware.xyz>"
 
 WORKDIR /opt/vlang
 
-RUN git clone https://github.com/vlang/v /opt/vlang && make CC=clang && v -version
+RUN git clone https://github.com/vlang/v /opt/vlang && \
+    make CC=clang && v -version && \
+    mkdir /src
+
+WORKDIR /src
