--- a/docker/vlang/Dockerfile.buster.dev-full
+++ b/docker/vlang/Dockerfile.buster.dev-full
@@ -6,4 +6,6 @@ LABEL maintainer="helto4real <helto4real@joysoftware.xyz>"
 
 WORKDIR /opt/vlang
 
-RUN git clone https://github.com/vlang/v /opt/vlang && make && v -version
+RUN git clone https://github.com/vlang/v /opt/vlang && \ 
+    make CC=clang && v -version && \
+    mkdir /src
